--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,19 +1,33 @@
 ---
 dependencies:
   cloud_firestore: ^3.1.1
+  google_fonts: ^2.3.1
   cupertino_icons: ^1.0.4
+  cached_network_image: ^3.2.0
+  shimmer: ^2.0.0
+  line_icons: ^2.0.1
+  firebase_auth: ^3.3.7
+  flutter_cache_manager: ^3.3.0
+  octo_image: ^1.0.1
+  flutter_blurhash: ^0.6.4
   firebase_core: ^1.10.6
+  firebase_storage: ^10.2.7
+  flutter_secure_storage: ^5.0.2
+  google_nav_bar: ^5.0.5
+  flutter:
+    sdk: flutter
   fluttertoast: ^8.0.8
   get: ^4.6.1
   http: ^0.13.4
   image_gallery_saver: ^1.7.1
+  image_picker: ^0.8.4+8
   import_sorter: ^4.6.0
   logger: ^1.1.0
+  ndialog: ^4.1.0
+  path: ^1.8.0
   path_provider: ^2.0.8
   permission_handler: ^8.3.0
   qr_flutter: ^4.0.0
-  flutter:
-    sdk: flutter
 description: Digital Solution for Bussiness
 dev_dependencies:
   flutter_lints: ^1.0.4
@@ -22,7 +36,12 @@ dev_dependencies:
 environment:
   sdk: ">=2.16.0 <3.0.0"
 flutter:
+  assets:
+    - assets/images/
   fonts:
+    - family: Nunito
+      fonts:
+        - asset: assets/fonts/Nunito.ttf
     - family: Lato
       fonts:
         - asset: assets/fonts/Lato-Regular.ttf
