--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,8 +4,9 @@ dependencies:
   badges: ^2.0.2
   cached_network_image: ^3.2.0
   cloud_firestore: ^3.1.8
+  contacts_service: ^0.6.3
   cupertino_icons: ^1.0.4
-  scan: ^1.6.0
+  dio: ^4.0.4
   fancy_shimmer_image: ^2.0.1+1
   firebase_auth: ^3.3.7
   firebase_core: ^1.12.0
@@ -17,6 +18,7 @@ dependencies:
   flutter_secure_storage: ^5.0.2
   flutter_spinkit: ^5.1.0
   flutter_staggered_grid_view: ^0.6.1
+  flutter_stripe: ^2.4.0
   flutter_svg: ^1.0.3
   fluttertoast: ^8.0.8
   get: ^4.6.1
@@ -36,6 +38,7 @@ dependencies:
   path_provider: ^2.0.9
   permission_handler: ^9.2.0
   qr_flutter: ^4.0.0
+  scan: ^1.6.0
   shimmer: ^2.0.0
   timeago: ^3.2.2
   url_launcher: ^6.0.20
@@ -46,7 +49,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 environment:
-  sdk: ">=2.16.0 <3.0.0"
+  sdk: '>=2.16.0 <3.0.0'
 flutter:
   assets:
     - assets/images/
