--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 ---
 dependencies:
   animated_splash_screen: ^1.2.0
+  awesome_card: ^1.1.7
   badges: ^2.0.2
   cached_network_image: ^3.2.0
   cloud_firestore: ^3.1.8
@@ -9,7 +10,6 @@ dependencies:
   dio: ^4.0.4
   fancy_shimmer_image: ^2.0.1+1
   firebase_auth: ^3.3.7
-  awesome_card: ^1.1.7
   firebase_core: ^1.12.0
   firebase_storage: ^10.2.7
   flutter:
@@ -50,7 +50,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 environment:
-  sdk: ">=2.16.0 <3.0.0"
+  sdk: '>=2.16.0 <3.0.0'
 flutter:
   assets:
     - assets/images/
