--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,38 +1,42 @@
 ---
 dependencies:
-  animated_splash_screen: ^1.2.0
-  awesome_card: ^1.1.7
-  badges: ^2.0.2
-  cached_network_image: ^3.2.0
-  cloud_firestore: ^3.1.8
+  cached_network_image: ^3.2.1
+  camera: ^0.9.5
+  cloud_firestore: ^3.1.15
   contacts_service: ^0.6.3
   cupertino_icons: ^1.0.4
-  dio: ^4.0.4
-  fancy_shimmer_image: ^2.0.1+1
-  firebase_auth: ^3.3.7
-  firebase_core: ^1.12.0
-  firebase_storage: ^10.2.7
+  dio: ^4.0.6
+  fancy_shimmer_image: ^2.0.2
+  firebase_auth: ^3.3.18
+  firebase_core: ^1.17.0
+  firebase_storage: ^10.2.16
   flutter:
     sdk: flutter
-  flutter_blurhash: ^0.6.4
+  flutter_advanced_switch: ^3.0.1
+  flutter_blurhash: ^0.7.0
   flutter_cache_manager: ^3.3.0
+  flutter_camera_overlay: ^0.1.1
   flutter_secure_storage: ^5.0.2
   flutter_spinkit: ^5.1.0
   flutter_staggered_grid_view: ^0.6.1
-  flutter_stripe: ^2.4.0
   flutter_svg: ^1.0.3
-  fluttertoast: ^8.0.8
-  get: ^4.6.1
-  google_fonts: ^2.3.1
-  google_nav_bar: ^5.0.5
+  fluttertoast: ^8.0.9
+  get: ^4.6.3
+  google_fonts: ^2.3.2
+  google_mlkit_image_labeling: ^0.3.0
+  google_nav_bar: ^5.0.6
   http: ^0.13.4
   image_gallery_saver: ^1.7.1
-  image_picker: ^0.8.4+10
+  image_picker: ^0.8.5+3
   import_sorter: ^4.6.0
+  introduction_screen: ^3.0.2
   line_icons: ^2.0.1
   logger: ^1.1.0
-  mobile_scanner: ^0.2.0
+  marquee: ^2.2.1
+  mobile_scanner:
+    git: https://github.com/ahzam-shahnil/mobile_scanner.git
   modal_bottom_sheet: ^2.0.0
+  modal_progress_hud_nsn: ^0.1.0-nullsafety-1
   ndialog: ^4.1.1
   octo_image: ^1.0.1
   path: ^1.8.0
@@ -41,20 +45,28 @@ dependencies:
   qr_flutter: ^4.0.0
   scan: ^1.6.0
   shimmer: ^2.0.0
+  simple_animations: ^4.0.2
+  text_scroll: ^0.0.4
   timeago: ^3.2.2
-  url_launcher: ^6.0.20
+  url_launcher: ^6.1.2
   uuid: ^3.0.6
 description: Digital Solution for Bussiness
 dev_dependencies:
-  flutter_lints: ^1.0.4
+  build_runner: null
+  flutter_gen_runner: null
+  flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter
 environment:
-  sdk: '>=2.16.0 <3.0.0'
+  sdk: ">=2.16.0 <3.0.0"
 flutter:
   assets:
     - assets/images/
+    - assets/images/onboard_1st/
+    - assets/images/onboard_2nd/
     - assets/svgs/
+    - assets/tflite/model.tflite
+    - assets/tflite/labels.txt
   fonts:
     - family: Nunito
       fonts:
@@ -68,6 +80,13 @@ flutter:
       fonts:
         - asset: assets/fonts/Anton-Regular.ttf
   uses-material-design: true
+flutter_gen:
+  integrations:
+    flare_flutter: false
+    flutter_svg: true
+    rive: false
+  line_length: 80
+  output: lib/gen/
 name: pay_qr
 publish_to: none
 version: 1.0.0+1
