code refractor and ui changes

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
   fancy_shimmer_image: ^2.0.2
   file_saver:
     git: https://github.com/incrediblezayed/file_saver.git
+  firebase_analytics: ^9.1.9
   firebase_auth: ^3.3.19
   firebase_core: ^1.17.1
   firebase_storage: ^10.2.17
@@ -64,7 +65,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 environment:
-  sdk: ">=2.16.0 <3.0.0"
+  sdk: '>=2.16.0 <3.0.0'
 flutter:
   assets:
     - assets/images/
