--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   timeago: ^3.2.2
   url_launcher: ^6.1.2
   uuid: ^3.0.6
+  jiffy: ^5.0.0
 description: Digital Solution for Bussiness
 dev_dependencies:
   build_runner: null
