--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,32 +11,23 @@ dependencies:
     git: https://github.com/incrediblezayed/file_saver.git
   firebase_analytics: ^9.1.9
   firebase_auth: ^3.3.19
+  share_plus: ^4.0.10
   firebase_core: ^1.17.1
   firebase_storage: ^10.2.17
   flutter:
     sdk: flutter
-  flutter_advanced_switch: ^3.0.1
-  flutter_blurhash: ^0.7.0
-  flutter_cache_manager: ^3.3.0
-  flutter_camera_overlay: ^0.1.1
-  flutter_secure_storage: ^5.0.2
-  flutter_spinkit: ^5.1.0
   flutter_staggered_grid_view: ^0.6.1
   flutter_svg: ^1.1.0
   fluttertoast: ^8.0.9
   get: ^4.6.5
-  google_fonts: ^3.0.1
-  google_mlkit_image_labeling: ^0.3.0
   google_nav_bar: ^5.0.6
   http: ^0.13.4
   image_gallery_saver: ^1.7.1
   image_picker: ^0.8.5+3
   import_sorter: ^4.6.0
-  introduction_screen: ^3.0.2
   supercharged: ^2.1.1
   line_icons: ^2.0.1
   logger: ^1.1.0
-  marquee: ^2.2.1
   mobile_scanner:
     git: https://github.com/ahzam-shahnil/mobile_scanner.git
   modal_bottom_sheet: ^2.0.0
@@ -58,6 +49,7 @@ dependencies:
   timeago: ^3.2.2
   url_launcher: ^6.1.2
   uuid: ^3.0.6
+  flutter_image_compress: ^1.1.0
   jiffy: ^5.0.0
 description: Digital Solution for Bussiness
 dev_dependencies:
