--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
 description: Digital Solution for Bussiness
 dev_dependencies:
   build_runner: null
+  flutter_launcher_icons: ^0.9.3
   flutter_gen_runner: null
   flutter_lints: ^2.0.1
   flutter_test:
@@ -81,6 +82,10 @@ flutter:
       fonts:
         - asset: assets/fonts/Anton-Regular.ttf
   uses-material-design: true
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/logo_wn.png"
 flutter_gen:
   integrations:
     flare_flutter: false
